salesforce/force-app/main/default/objects/Discount_Code__c/Discount_Code__c.object-meta.xml
<CustomObject>
    <description>A percentage-off discount code that public order forms can redeem. Staff create and retire codes here; no code change or deploy is needed to add, activate or expire one.</description>
    <label>Discount Code</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>