salesforce/force-app/main/default/objects/Discount_Code__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Unticking this switches the code off immediately, whatever its dates say. This is the fastest way to retire a code that has leaked or been over-used; the record and its history are kept.</description>
    <inlineHelpText>Untick to switch this code off immediately, whatever the dates say.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>