salesforce/force-app/main/default/objects/Discount_Code__c/fields/Check_Redemptions__c.field-meta.xml
<CustomField>
    <fullName>Check_Redemptions__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Orders placed with this code that are being paid by check. Maintained by the Discount Code Check Redemptions rollup over Form__c; do not type in it. These orders have no Transaction__c and never will until somebody banks the check, so Times Redeemed - which counts paid transactions - cannot see them. Use Total Redemptions for the number that means "how many people have used this code".</description>
    <inlineHelpText>Check orders placed with this code. Maintained by a rollup; do not edit.</inlineHelpText>
    <label>Check Redemptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>