salesforce/force-app/main/default/objects/Discount_Code__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Last day the code works, inclusive, judged in US Eastern time. A code with an End Date of 15 October still works all day on 15 October and stops at midnight Eastern. Leave blank for a code with no expiry.</description>
    <inlineHelpText>Last day the code works (inclusive), Eastern time. Leave blank for no expiry.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>