salesforce/force-app/main/default/objects/Discount_Code__c/fields/Max_Redemptions__c.field-meta.xml
<CustomField>
    <fullName>Max_Redemptions__c</fullName>
    <description>How many paid orders may use this code before it stops working. Leave blank for no limit. Checked against Times Redeemed, which is only incremented once an order is actually paid - see the Discount Codes section of the forms README for how that counting is wired up.</description>
    <inlineHelpText>Leave blank for no limit. Measured against Total Redemptions - paid orders and promised checks together - and it is per date window, not per code.</inlineHelpText>
    <label>Max Redemptions</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>