salesforce/force-app/main/default/objects/Discount_Code__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Who this code was issued to and why - the podcast, the partner, the conference. Internal only; nothing here is ever sent to the browser.</description>
    <inlineHelpText>Who this code went to and why. Internal only.</inlineHelpText>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>