salesforce/force-app/main/default/objects/Discount_Code__c/fields/Percent_Off__c.field-meta.xml
<CustomField>
    <fullName>Percent_Off__c</fullName>
    <description>Percentage taken off the order subtotal. A whole number from 1 to 100. The order form refuses to apply anything outside that range.</description>
    <inlineHelpText>Whole number, 1 to 100. 25 means 25% off the order.</inlineHelpText>
    <label>Percent Off</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>