salesforce/force-app/main/default/objects/Discount_Code__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Which order form the code is good for. A code is only accepted by the product named here, so a Hospitality Guide code cannot be redeemed against something else later. Leave blank only for a code deliberately valid everywhere.</description>
    <inlineHelpText>Which order form this code works on. Leave blank only if it should work everywhere.</inlineHelpText>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>hospitality-guide</fullName>
                <default>true</default>
                <label>Hospitality Guide</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>