salesforce/force-app/main/default/objects/Discount_Code__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>First day the code works, inclusive, judged in US Eastern time. Leave blank for a code that works from the moment it is created.</description>
    <inlineHelpText>First day the code works (inclusive), Eastern time. Leave blank to start straight away.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>