salesforce/force-app/main/default/objects/Discount_Code__c/fields/Times_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Times_Redeemed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Orders on this code that were PAID - maintained by the Discount Code Times Redeemed rollup over Transaction__c. It was called "Times Redeemed", and that name cost an afternoon: a check order is a redemption and creates no Transaction__c, so this sat at zero while real orders came in and the code looked unused. It is one half of the answer. Total Redemptions is the answer.</description>
    <inlineHelpText>Orders on this code whose payment has settled. Read Total Redemptions for how many times the code has actually been used - a check order is a redemption too, and it never appears here.</inlineHelpText>
    <label>Paid Redemptions</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>