salesforce/force-app/main/default/objects/Discount_Code__c/fields/Total_Redemptions__c.field-meta.xml
<CustomField>
    <fullName>Total_Redemptions__c</fullName>
    <description>Every order this code has been used on: paid card orders plus orders awaiting a check. This is the number the order form checks Max Redemptions against, and the one to read when asking how many people have used a code. Times Redeemed counts only what has been paid for, and a check order sits outside it for as long as the check is in the post.</description>
    <formula>NULLVALUE(Times_Redeemed__c, 0) + NULLVALUE(Check_Redemptions__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Paid redemptions plus check orders awaiting payment. This is what the cap is measured against.</inlineHelpText>
    <label>Total Redemptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>