salesforce/force-app/main/default/objects/Discount_Code__c/listViews/Active_Codes.listView-meta.xml
<ListView>
    <fullName>Active_Codes</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Percent_Off__c</columns>
    <columns>Campaign__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Max_Redemptions__c</columns>
    <columns>Total_Redemptions__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Codes</label>
</ListView>