salesforce/force-app/main/default/objects/Discount_Code__c/listViews/All_Codes.listView-meta.xml
<ListView>
    <fullName>All_Codes</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Percent_Off__c</columns>
    <columns>Active__c</columns>
    <columns>Campaign__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Codes</label>
</ListView>